<resources>
    <string name="app_name">GithubTopia</string>
    <string name="example_full_name">Example Full Name</string>
    <string name="example_username">Example Username</string>
    <string name="example_countfollower">x id • y node_id</string>
    <string name="detail_example_full_name">Example Full Name</string>
    <string name="detail_example_username">Example Username</string>
    <string name="detail_example_nof">Example Number of Followers</string>
    <string name="detail_example_company">Example Company</string>
    <string name="detail_example_location">Example Location</string>
    <string name="user_repositories_title">User Repositories</string>
    <string name="example_repo_name">Example Repo Name</string>
    <string name="example_tool_name">Example Tool Name</string>
    <string name="example_warning">Example Warning</string>
    <string name="search_helper">Cari user disini</string>
    <string name="empty_list_favorite_wording">Favorited user is empty. Favorite the user first, then you can see the list of your favorite user here</string>
    <string name="empty_list_favorite_roast">Sorry, looks like the list is empty, like your heart</string>
    <string name="general_settings">General Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_off">OFF</string>
    <string name="switch_on">ON</string>
    <string name="about">About</string>
    <string name="about_title">GithubTopia - Created by PKN (Ver 1.3.0)</string>
    <string name="about_desc">Berdiri sejak tidak kebagian kursi</string>
</resources>